--- a/views/createIdea.html
+++ b/views/createIdea.html
@@ -5,29 +5,26 @@
 </style>
 
 <h2>Create a new idea</h2>
-<p>Please enter the ideas detail</p>
+<p>Please enter the idea details</p>
 <form name="ideaForm" novalidate>
 	<div class="well">
-		<h3>Title</h3>
-		<div class="form-group">
-			<label>Title</label>
-			<input name="title" class="form-control" ng-model="data.idea.title" required />
-			<span class="error" ng-show="ideaForm.title.$error.required">Please enter a title.</span>
+		<h3>Name</h3>
+		<div class="form-group">			
+			<input name="name" class="form-control" ng-model="data.idea.name" required />
+			<span class="error" ng-show="ideaForm.name.$error.required">Please enter a name.</span>
 		</div>
 		<h3>Category</h3>
-		<div class="form-group">
-			<label>Category</label>
+		<div class="form-group">			
 			<input name="category" class="form-control" ng-model="data.idea.category" required />
 			<span class="error" ng-show="ideaForm.category.$error.required">Please enter a category.</span>
 		</div>
 		<h3>Description</h3>
-		<div class="form-group">
-			<label >Description</label>
+		<div class="form-group">			
 			<input name="description" class="form-control" ng-model="data.idea.description" required/>
 			<span class="error" ng-show ="ideaForm.description.$error.required">Please enter a description.</span>
 		</div>
-		<div class="form-group">
-			<label>Author</label>
+		<h3>Author</h3>
+		<div class="form-group">			
 			<input name="author" class="form-control" ng-model="data.idea.author" required>
 			<span class="error" ng-show="ideaForm.author.$error.required"> Please enter a author.</span>
 		</div>		
