--- a/views/ideaDetails.html
+++ b/views/ideaDetails.html
@@ -1,23 +1,24 @@
 <h2>Idea details</h2>
-<div class="well">
-	<h3>Title</h3>
-	<div class="form-group">
-		<label>Title</label>
-		<label name="title" class="form-control" ng-model="data.selectedIdea.title" required />			
+<div class="well" ng-controller="ideaDetailsCtrl">
+	<h3>Name</h3>
+	<div class="form-group">			
+		<label name="title" class="form-control" ng-bind="data.selectedIdea.name" />			
 	</div>
 	<h3>Category</h3>
-	<div class="form-group">
-		<label>Category</label>
-		<label name="category" class="form-control" ng-model="data.selectedIdea.category" required />
+	<div class="form-group">		
+		<label name="category" class="form-control" ng-bind="data.selectedIdea.category" />
 	</div>
 	<h3>Description</h3>
-	<div class="form-group">
-		<label >Description</label>
-		<label name="description" class="form-control" ng-model="data.selectedIdea.description" required/>
+	<div class="form-group">	
+		<label name="description" class="form-control" ng-bind="data.selectedIdea.description"/>
 	</div>
-	<div class="form-group">
-		<label>Author</label>
-		<label name="author" class="form-control" ng-model="data.selectedIdea.author" required>
+	<h3>Author</h3>
+	<div class="form-group">		
+		<label name="author" class="form-control" ng-bind="data.selectedIdea.author" />
+	</div>	
+	<h3>Votes</h3>
+	<div class="form-group">		
+		<label name="votes" class="form-control" ng-bind="data.selectedIdea.votes" />
 	</div>		
 	<div class="text-center">
 		<button ng-click="removeIdea()" class="btn btn-danger">Delete the idea</button>
