Forgot to add those files

--- a/views/createIdea.html
+++ b/views/createIdea.html
@@ -3,7 +3,7 @@
 	.ng-valid { background-color: lightgreen; }
 	span.error { color: red; font-weight: bold; }
 </style>
-
+<div ui-view/>
 <h2>Create a new idea</h2>
 <p>Please enter the idea details</p>
 <form name="ideaForm" novalidate>
