--- a/views/ideaDetails.html
+++ b/views/ideaDetails.html
@@ -19,7 +19,7 @@
 	</div>	
 	<h4>Votes</h4>
 	<div class="form-group">		
-		{{data.selectedIdea.votes}}
+		{{data.selectedIdea.votes.length}}
 	</div>		
 	<div class="text-center">
 		<button ng-click="removeIdea(data.selectedIdea._id)" class="btn btn-danger">Delete the idea</button>
