--- a/views/ideaList.html
+++ b/views/ideaList.html
@@ -18,7 +18,7 @@
 			<h4>
 				<strong>{{item.name}}</strong>
 				<span class="pull-right label label-primary">
-					{{ item.votes}}
+					{{ item.votes.length}}
 				</span>
 			</h4>
 			<button ng-click="upVote(item)" class="btn btn-success pull-right">
